2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove AM_CONDITIONAL(HAS_POSIX) (Unused).

2011-02-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada-tests/mptests/mp01/mp01.adb, ada-tests/mptests/mp01/mptest.adb,
	ada-tests/mptests/mp01/mptest.ads,
	ada-tests/mptests/mp01/node1/mp01_node1.adb,
	ada-tests/mptests/mp01/node2/mp01_node2.adb,
	ada-tests/mptests/mp02/mptest.adb, ada-tests/mptests/mp02/mptest.ads,
	ada-tests/mptests/mp02/node1/mp02_node1.adb,
	ada-tests/mptests/mp02/node2/mp02_node2.adb,
	ada-tests/mptests/mp03/mptest.adb, ada-tests/mptests/mp03/mptest.ads,
	ada-tests/mptests/mp03/node1/mp03_node1.adb,
	ada-tests/mptests/mp03/node2/mp03_node2.adb,
	ada-tests/mptests/mp04/mptest.adb, ada-tests/mptests/mp04/mptest.ads,
	ada-tests/mptests/mp04/node1/mp04_node1.adb,
	ada-tests/mptests/mp04/node2/mp04_node2.adb,
	ada-tests/mptests/mp05/mptest.adb, ada-tests/mptests/mp05/mptest.ads,
	ada-tests/mptests/mp05/node1/mp05_node1.adb,
	ada-tests/mptests/mp05/node2/mp05_node2.adb,
	ada-tests/mptests/mp06/mptest.adb, ada-tests/mptests/mp06/mptest.ads,
	ada-tests/mptests/mp06/node1/mp06_node1.adb,
	ada-tests/mptests/mp06/node2/mp06_node2.adb,
	ada-tests/mptests/mp07/mptest.adb, ada-tests/mptests/mp07/mptest.ads,
	ada-tests/mptests/mp07/node1/mp07_node1.adb,
	ada-tests/mptests/mp07/node2/mp07_node2.adb,
	ada-tests/mptests/mp08/mptest.adb, ada-tests/mptests/mp08/mptest.ads,
	ada-tests/mptests/mp08/node1/mp08_node1.adb,
	ada-tests/mptests/mp08/node2/mp08_node2.adb,
	ada-tests/mptests/mp09/mptest.adb, ada-tests/mptests/mp09/mptest.ads,
	ada-tests/mptests/mp09/node1/mp09_node1.adb,
	ada-tests/mptests/mp09/node2/mp09_node2.adb,
	ada-tests/mptests/mp10/mptest.adb, ada-tests/mptests/mp10/mptest.ads,
	ada-tests/mptests/mp10/node1/mp10_node1.adb,
	ada-tests/mptests/mp10/node2/mp10_node2.adb,
	ada-tests/mptests/mp11/mptest.adb, ada-tests/mptests/mp11/mptest.ads,
	ada-tests/mptests/mp11/node1/mp11_node1.adb,
	ada-tests/mptests/mp11/node2/mp11_node2.adb,