@@ -1,5 +1,12 @@
 2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* aclocal/canonical-target-name.m4:
+	Stop pretending no_cpu* was buildable.
+	Derive RTEMS_CPU from "$host_cpu".
+	Error out if "$host" doesn't match "*-*-rtems*".
+
+2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* aclocal/check-networking.m4, aclocal/check-posix.m4:
 	Rebase check on "$host".
 
